# cost-accounting

./: .gitignore  Cargo.toml
src/: custom_widgets.rs  error.rs  expense.rs  income.rs  main.rs  pages.rs  styles.rs  user.rs
src/custom_widgets/: exit_button_widget.rs  hyperlink_widget.rs  modal_window.rs
src/pages/: notes_page.rs  registration_login_page.rs
src/styles/: notes_styling.rs
